--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@
 
     /* font-size: 100%; */
     font-size: 62.5%; /* 1rem = 10px */
+
+    --nav-height: 7.2rem;
 }
 
 body {
@@ -26,18 +28,19 @@ body {
 .wrapper {
     width: 37.5rem;
     margin-inline: auto;
+    padding-inline: 2.4rem;
 }
 
 /* ================ HEADER ================ */
 
 header {
-    margin-top: 4.1rem;
+    margin-top: calc(4.1rem + var(--nav-height));
 }
 
 header::before {
     content: "";
     width: 100vw;
-    height: 108rem;
+    height: calc((108rem) + var(--nav-height));
     background-color: var(--green-light);
     display: block;
 
@@ -164,7 +167,32 @@ header img {
 
 nav {
     display: flex;
+    height: var(--nav-height);
+    /* padding: 1.6rem 2.4rem;  */
+
+    position: fixed;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    /* transition: 0.5s; */
+}
+
+nav .wrapper {
+    display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 1.6rem 2.4rem; 
+}
+
+nav.scroll {
+    background-color: var(--primary-color);
+    width: 100vw;
+}
+
+nav.scroll svg:nth-child(1) path {
+    fill: white;
+    /* stroke: white; */
+}
+
+nav.scroll svg:nth-child(2) path {
+    stroke: white;
 }
