--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 * {
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
@@ -19,6 +20,11 @@
     --nav-height: 7.2rem;
 }
 
+html, body {
+    width: 100%;
+    height: 100%;
+}
+
 body {
     font-family: 'DM Sans';
     font-size: 1.6rem;
@@ -31,6 +37,10 @@ body {
     padding-inline: 2.4rem;
 }
 
+ul {
+    list-style: none;
+}
+
 /* ================ HEADER ================ */
 
 header {
@@ -39,7 +49,7 @@ header {
 
 header::before {
     content: "";
-    width: 100vw;
+    width: 100%;
     height: calc((108rem) + var(--nav-height));
     background-color: var(--green-light);
     display: block;
@@ -102,7 +112,7 @@ header img {
     width: 26.4rem;
     display: block;
     margin-inline: auto;
-    object-position: 0 2rem;
+    object-position: 0rem 2rem;
 }
 
 /* 
@@ -193,6 +203,110 @@ nav.scroll svg:nth-child(1) path {
     /* stroke: white; */
 }
 
-nav.scroll svg:nth-child(2) path {
+nav.scroll button path {
+    stroke: white;
+}
+
+nav button {
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
+/* ================ MENU-EXPANDED ================ */
+
+body.menu-expanded {
+    overflow: hidden;
+}
+
+body.menu-expanded > :not(nav) {
+    display: none;
+}
+
+.menu, 
+.close-menu,
+body.menu-expanded .open-menu {
+    opacity: 0;
+    visibility: hidden;
+}
+
+body.menu-expanded .menu,
+body.menu-expanded .close-menu {
+    opacity: 1;
+    visibility: visible;
+}
+
+body.menu-expanded .menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: var(--primary-color);
+
+    width: 100vw;
+    height: 100vh; 
+
+    padding-top: var(--nav-height);
+}
+
+body.menu-expanded nav {
+    position: relative;
+}
+
+.menu ul:nth-child(1) {
+    display: flex;
+    flex-direction: column;
+    gap: 4.8rem;
+
+    margin-top: 6rem;
+
+    font-weight: 700;
+    font-size: 2.4rem;
+    line-height: 3.1rem;
+}
+
+.menu ul li a {
+    text-decoration: none;
+    color: white;
+}
+
+.menu .button {
+    background-color: white;
+
+    text-decoration: none;
+    color: var(--primary-color);
+    font-weight: 700;
+    font-size: 1.8rem;
+    line-height: 2.3rem;
+    text-transform: uppercase;
+
+    padding: 1.6rem 3.2rem;
+
+    border-radius: 4rem;
+
+    display: inline-block;
+
+    margin-bottom: 8rem;
+    margin-top: 4.8rem;
+}
+
+.social-links {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 3.2rem;
+}
+
+body.menu-expanded .logo,
+body.menu-expanded .close-menu {
+    position: relative;
+    z-index: 1;
+}
+
+body.menu-expanded .logo path {
+    fill: white;
+    /* stroke: white; */
+}
+
+body.menu-expanded button path {
     stroke: white;
 }
