Atualização de detalhes no menu.

--- a/style.css
+++ b/style.css
@@ -28,7 +28,10 @@ html, body {
 body {
     font-family: 'DM Sans';
     font-size: 1.6rem;
+
     text-align: center;
+
+    overflow: overlay;
 }
 
 .wrapper {
